--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="copyright" content="MACode ID, https://macodeid.com">
+  <meta name="copyright" content="Trinity Prime, https://trinity1357.githbub.io">
 
   <title>Trinity Prime - about</title>
 
